# cptkirk

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: auth.R  ck_batch.R  ck_read.R  ck_stack.R  ck_warp.R  cog_info.R  cog_source.R  cptkirk-package.R  engine.R  extendr-wrappers.R  gdal-config.R  stage.R  validate.R  warp_remote.R
articles/: index.html  index.md  remote-sources.html  remote-sources.md
articles/articles/: remote-sources.html
docs/: 404.html  LICENSE-text.html  LICENSE-text.md  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
docs/reference/: ck_warp.html  ck_warp.md  cog_info.html  (+9 more)
man/: as.data.frame.cog_info.Rd  ck_batch.Rd  ck_read.Rd  ck_stack.Rd  ck_stack_read.Rd  ck_warp.Rd  cog_fetch_window.Rd  cog_fetch_window_raw.Rd  cog_fetch_windows_raw.Rd  cog_info.Rd  cog_meta.Rd  cog_meta_many.Rd  cog_open.Rd  cog_source.Rd  cptkirk-package.Rd  warp_remote.Rd
reference/: as.data.frame.cog_info.html  as.data.frame.cog_info.md  as.data.frame.cog_info_list.html  ck_batch.html  ck_batch.md  ck_read.html  ck_read.md  ck_stack.html  ck_stack.md  ck_stack_read.html  ck_stack_read.md  ck_warp.html  ck_warp.md  cog_info.html  cog_info.md  cog_source.html  cptkirk-package.html  cptkirk-package.md  index.html  index.md  warp_remote.html
src/: Makevars.in  Makevars.win.in  cptkirk-win.def  entrypoint.c
src/rust/: Cargo.toml  document.rs
src/rust/src/: band_fetch.rs  error.rs  http_reader.rs  lib.rs  meta.rs  runtime.rs  source.rs  window.rs
tests/: testthat.R
tools/: config.R
(+15 files in other folders)
