[package]
name = 'cptkirk'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.78'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'cptkirk'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
async-tiff = { version = '0.3', default-features = false, features = ['object_store', 'reqwest', 'tokio'] }
object_store = { version = '0.13', features = ['aws', 'gcp', 'azure', 'http'] }
tokio = { version = '1', features = ['rt-multi-thread', 'sync', 'macros'] }
futures = '0.3'
bytes = '1'
thiserror = '2'
url = '2'
num_cpus = '1'

[profile.release]
lto = true
codegen-units = 1
