[package]
name = 'cptkirk'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.78'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'cptkirk'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
async-tiff = { version = '0.3', default-features = false, features = ['object_store', 'tokio'] }
object_store = { version = '0.13', features = ['aws', 'gcp', 'azure', 'http'] }
# Raw-HTTP range reader for pre-signed URLs (see http_reader.rs). Pinned to the
# same reqwest 0.12 + ring/rustls stack object_store already uses, so no second
# TLS backend (reqwest 0.13's rustls would drag in aws-lc-rs + cmake).
reqwest = { version = '0.12', default-features = false, features = ['rustls-tls', 'http2'] }
async-trait = '0.1'
tokio = { version = '1', features = ['rt-multi-thread', 'sync', 'macros'] }
futures = '0.3'
bytes = '1'
thiserror = '2'
url = '2'
num_cpus = '1'

[profile.release]
lto = true
codegen-units = 1
